--- a/ClientApp/src/app/shopping/store-items/store-items.component.scss
+++ b/ClientApp/src/app/shopping/store-items/store-items.component.scss
@@ -21,7 +21,7 @@
   position: sticky;
   top: 0;
   background: white;
-  z-index: 1;
+  z-index: 2;
   margin: 8px -16px 0;
   padding: 8px 16px 0;
 }
